--- a/index.html
+++ b/index.html
@@ -7,11 +7,6 @@
     
     <!-- PRELOAD -->
     <link rel="preload" href="style.css" as="style">
-    <link rel="preload" href="JS/canvas.js" as="script">
-    <link rel="preload" href="JS/user.js" as="script">
-    <link rel="preload" href="JS/Entities/fragment.js" as="script">
-    <link rel="preload" href="JS/Entities/rock.js" as="script">
-    <link rel="preload" href="JS/gameThread.js" as="script">
 
     <!-- STYLE -->
     <link rel="stylesheet" href="style.css">
@@ -24,8 +19,9 @@
     <!-- SCRIPT -->
     <script src="JS/canvas.js"></script>
     <script src="JS/user.js"></script>
-    <script src="JS//Entities/rock.js"></script>
     <script src="JS/Entities/fragment.js"></script>
+    <script src="JS//Entities/rock.js"></script>
+    <script src="JS//Entities/runner.js"></script>
     <script src="JS/gameThread.js"></script>
     
 </body>
